syntax = "proto3";

package calculator;
option go_package="calcpb";

message AddRequest {
    int32 numberOne = 1;
    int32 numberTwo = 2;
}

message AddResponse {
    int32 result = 1;
}

message SquareRootRequest {
    int32 number = 1;
}

message SquareRootResponse {
    double number_root = 1;
}

service CalculateService{
    // unary
    rpc Add(AddRequest) returns (AddResponse) {};

    // error handling
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}